# igcode_backend

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  start.py
.github/workflows/: python-publish.yml
app/: auth.py  crud.py  database.py  main.py  models.py
tests/: test_main.py
